--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@types/reactstrap": "^8.7.2",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.0.0",
     "react-redux": "^7.2.5",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "sass": "^1.43.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
@@ -48,6 +56,7 @@
     "@types/node": "^16.11.2",
     "@types/react": "^17.0.31",
     "@types/react-dom": "^17.0.10",
-    "@types/react-router": "^5.1.17"
+    "@types/react-router": "^5.1.17",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
