--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/reactstrap": "^8.7.2",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
     "rc-tooltip": "^5.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
